--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -1,8 +1,9 @@
 beperfect1a:
 - {CZ: já jsem tady, EN: I have been here}
+- {CZ: ty jsi tady, EN: You have been here}
 - {CZ: on je tady, EN: he has been here}
 - {CZ: ona je tady, EN: she has been here}
-- {CZ: to je tady, EN: it has been here}
+- {CZ: je to tady, EN: it has been here}
 - {CZ: my jsme tady, EN: we have been here}
 - {CZ: oni jsou tady, EN: they have been here}
 - {CZ: já jsem tam, EN: I have been there}
@@ -17,10 +18,11 @@ beperfect1n:
 - {CZ: ty tady nejsi, EN: you haven't been here}
 - {CZ: on tady není, EN: he hasn't been here}
 - {CZ: ona tady není, EN: she hasn't here}
-- {CZ: to tady není, EN: it hasn't been here}
+- {CZ: není to tady, EN: it hasn't been here}
 - {CZ: my tady nejsme, EN: we haven't been here}
 - {CZ: oni tady nejsou, EN: they haven't been here}
 - {CZ: já tam nejsem, EN: I haven't been there}
+- {CZ: ty tam nejsi, EN: you haven't been there}
 - {CZ: on tam není, EN: he hasn't been there}
 - {CZ: ona tam není, EN: she hasn't there}
 - {CZ: my tam nejsme, EN: we haven't been there}
@@ -29,9 +31,11 @@ beperfect1n:
 bepastplace:
 - {CZ: byl/a jsem tady, EN: I was here}
 - {CZ: nebyl/a jsem tady, EN: I wasn't here}
-- {CZ: on byl tady, EN: he was here}
+- {CZ: ty jsi byl/a tady, EN: you were here}
+- {CZ: ty jsi tady nebyl/a, EN: you weren't here}
+- {CZ: on tady byl, EN: he was here}
 - {CZ: on tady nebyl, EN: he wasn't here}
-- {CZ: ona byla tady, EN: she was here}
+- {CZ: ona tady byla, EN: she was here}
 - {CZ: ona tady nebyla, EN: she wasn't here}
 - {CZ: bylo to tady, EN: it was here}
 - {CZ: nebylo to tady, EN: it wasn't here}
@@ -53,25 +57,26 @@ bepastplace:
 - {CZ: oni tam nebyli, EN: they weren't there}
 
 pastir:
-- {CZ: Viděl/a jsem ho, EN: I saw him}
-- {CZ: Koupil/a sis to, EN: You bought it}
+- {CZ: Viděla jsem ho, EN: I saw him}
+- {CZ: Koupil si to, EN: You bought it}
 - {CZ: Prodal to auto, EN: He sold the car}
 - {CZ: Potkala ho, EN: She met him}
 - {CZ: Šli jsme tam, EN: We went there}
-- {CZ: Našel jsem klíče, EN: He found the keys}
+- {CZ: Našla jsem klíče, EN: I  found the keys}
 - {CZ: Byla jsem tam, EN: I was there}
 - {CZ: Dodělali jsme domácí úkol, EN: We finished the homework}
 - {CZ: Poslal dopis, EN: he sent a letter}
 - {CZ: Moji rodiče postavili nový dům, EN: My parents built a new house}
 - {CZ: Přišel, EN: He came}
-- {CZ: Poslední pivo jsem pil/a, EN:I drank my last beer}
+- {CZ: Poslední pivo jsem pil, EN:I drank my last beer}
 - {CZ: Odešla, EN: She left}
+- {CZ: We heard about it, EN: Slyšeli jsme o tom}
 
 perfectir:
 - {CZ: Znám ji, EN: I have known her}
 - {CZ: Máme toto auto, EN: We have had this car}
 - {CZ: Neviděla je, EN: She hasn't seen them}
-
+- {CZ: Neslyšela o tom, EN: She hasn't heard about it}
 
 
 perfectirnext:
@@ -83,7 +88,9 @@ perfectirnext:
 - {CZ: od roku 2005, EN: since 2005}
 - {CZ: od ledna, EN: since January}
 - {CZ: dlouho, EN: for a long time}
-
+- {CZ: od února, EN: since February}
+- {CZ: od roku 2009, EN: since 2009}
+- {CZ: od roku 2019, EN: since 2019}
 
 pastnext:
 - {CZ: včera, EN: yesterday}
@@ -94,7 +101,11 @@ pastnext:
 - {CZ: před rokem, EN: a year ago}
 - {CZ: před pěti měsíci, EN: five months ago}
 - {CZ: před dvěma hodinami, EN: two hours ago}
-- {CZ: před lety, EN: years ago}
+- {CZ: v úterý, EN: on Tuesday}
+- {CZ: ve středu, EN: on Wednesday}
+- {CZ: ve čtvrtek, EN: On Thursday}
+- {CZ: v roce 2010, EN: in 2010}
+- {CZ: v roce 2012, EN: in 2012}
 
 
 perfectnext1:
@@ -111,14 +122,16 @@ perfectnext1:
 
 
 perfectalone:
-- {CZ: Ještě nenašla klíče, EN: She hasn't found the keys yet}
+- {CZ: Ještě jsem nenašla klíče, EN: I haven't found the keys yet}
 - {CZ: Konečně! Dodělali jsme domácí úkol, EN: Finally! We have finished the homework}
-- {CZ: Právě jsme odeslali ten email, EN: We have just sent that email}
-- {CZ: Už jsem tam byl/a, EN: I have already been there}
+- {CZ: Právě jsem odeslal ten email, EN: I have just sent that email}
+- {CZ: Už jsem tam byla, EN: I have already been there}
 - {CZ: Moji rodiče nedávno postavili nový dům, EN: My parents have built a new house recently}
 - {CZ: Přišel. Je tady, EN: He has come. He is here}
-- {CZ: Tohle jsem nikdy nepil/a, EN: I have never drunk it before}
+- {CZ: Tohle jsem nikdy nepila, EN: I have never drunk it before}
 - {CZ: Odešla, EN: She has left}
+- {CZ: Robert o tom ještě neslyšel, EN: Robert hasn't heard about it yet}
+- {CZ: On o tom slyšel předtím, EN: he has heard about it before}
 
 templates:
 - ["[beperfect1a:CZ] [perfectnext1:CZ].","[beperfect1a:EN] [perfectnext1:EN]."]
@@ -131,4 +144,5 @@ templates:
 - ["[perfectir:EN] [perfectirnext:EN].","[perfectir:CZ] [perfectirnext:CZ]."]
 - ["[perfectalone:CZ].","[perfectalone:EN]."]
 - ["[perfectalone:EN].","[perfectalone:CZ]."]
+
 
