--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -103,7 +103,7 @@ pastnext:
 - {CZ: před dvěma hodinami, EN: two hours ago}
 - {CZ: v úterý, EN: on Tuesday}
 - {CZ: ve středu, EN: on Wednesday}
-- {CZ: ve čtvrtek, EN: On Thursday}
+- {CZ: ve čtvrtek, EN: on Thursday}
 - {CZ: v roce 2010, EN: in 2010}
 - {CZ: v roce 2012, EN: in 2012}
 
