correct půl osmé

--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -117,7 +117,7 @@ perfectnext1:
 - {CZ: od minulé středy, EN: since last Wednesday}
 - {CZ: od roku 2005, EN: since 2005}
 - {CZ: od ledna, EN: since January}
-- {CZ: od půl osmé, EN: since half past eight}
+- {CZ: od půl deváté, EN: since half past eight}
 - {CZ: dlouho, EN: for a long time}
 
 
