--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -122,7 +122,7 @@ perfectnext1:
 
 
 perfectalone:
-- {CZ: Ještě jsem nenašla klíče, EN: I haven't found the keys yet}
+- {CZ: Ještě nenašla klíče, EN: She hasn't found the keys yet}
 - {CZ: Konečně! Dodělali jsme domácí úkol, EN: Finally! We have finished the homework}
 - {CZ: Právě jsem odeslal ten email, EN: I have just sent that email}
 - {CZ: Už jsem tam byla, EN: I have already been there}
