--- a/src/apps/anglictina-zakladni-gramatika.yaml
+++ b/src/apps/anglictina-zakladni-gramatika.yaml
@@ -88,7 +88,7 @@ bepastplace:
 - {CZ: vy jste tady byli, EN: you were here(formal or more people)}
 - {CZ: vy jste tady nebyli, EN: you weren't here (formal or more people)}
 - {CZ: oni tady byli, EN: they were here}
-- {CZ: oni tady nebyli tady, EN: they weren't here}
+- {CZ: oni tady nebyli, EN: they weren't here}
 - {CZ: Byl/a jsem tam, EN: I was here}
 - {CZ: Nebyl/a jsem tam, EN: I wasn't there}
 - {CZ: ty jsi tam byl/a, EN: you were there}
@@ -129,7 +129,7 @@ pastnext:
 - {CZ: v pondělí, EN: on Monday}
 - {CZ: v roce 2005, EN: in 2005}
 - {CZ: v lednu, EN: in January}
-- {CZ: v půl osmé, EN: at half past eight}
+- {CZ: v půl deváté, EN: at half past eight}
 - {CZ: před rokem, EN: an hour ago}
 - {CZ: před pěti měsíci, EN: five months ago}
 - {CZ: před dvěma hodinami, EN: two hours ago}
