--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -146,9 +146,9 @@ perfectalone:
 - {CZ: On o tom slyšel předtím, EN: he has heard about it before}
 
 perfectpast:
- {CZ: Miluji tě od prvního okamžiku, co jsem tě viděla , EN: I have loved you since the first moment I saw you}
- {CZ: Od té doby, co jsem tady začala pracovat, jsem potkala spoustu zajímavých lidí, EN: I have met many interesting people since I started working here}
- {CZ: A: Jak dlouho tady jsi? B: Přišel jsem včera, EN: A: How long have you been here? B: I came yesterday}
+-{CZ: Miluji tě od prvního okamžiku, co jsem tě viděla , EN: I have loved you since the first moment I saw you}
+-{CZ: Od té doby, co jsem tady začala pracovat, jsem potkala spoustu zajímavých lidí, EN: I have met many interesting people since I started working here}
+-{CZ: A: Jak dlouho tady jsi? B: Přišel jsem včera, EN: A: How long have you been here? B: I came yesterday}
 
  
 
