--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -146,8 +146,8 @@ perfectalone:
 - {CZ: On o tom slyšel předtím, EN: he has heard about it before}
 
 perfectpast:
-- {CZ: Miluji tě od prvního okamžiku, co jsem tě viděla , EN: I have loved you since the first moment I saw you}
-- {CZ: Od té doby, co jsem tady začala pracovat, jsem potkala spoustu zajímavých lidí, EN: I have met many interesting people since I started working here}
+- {CZ: Miluji tě od prvního okamžiku "," co jsem tě viděla , EN: I have loved you since the first moment I saw you}
+- {CZ: Od té doby"," co jsem tady začala pracovat "," jsem potkala spoustu zajímavých lidí, EN: I have met many interesting people since I started working here}
 - {CZ: A: Jak dlouho tady jsi? B: Přišel jsem včera, EN: A: How long have you been here? B: I came yesterday}
 
  
@@ -166,4 +166,4 @@ templates:
 - ["[seen:CZ] [seennext:CZ].","[seen:EN] [seennext:EN]."]
 - ["[seen:EN] [seennext:EN].","[seen:CZ] [seennext:CZ]."]
 - ["[perfectpast:EN].","[perfectpast:CZ]."]
-
+- ["[perfectpast:CZ].","[perfectpast:EN]."]
