--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -147,6 +147,9 @@ perfectalone:
 
 both:
 - {CZ: "Ještě jsem nenašla klíče, co jsme ztratila včera", EN: I haven't found the keys I lost yesterday}
+- {CZ: "Neudělala jsem nic od té doby, co jsem přečetla tvůj email", EN: I haven't done anything since I read your email}
+- {CZ: "Už prodala počítač, který koupila před 10 lety.", EN: She has already sold the computer she bought ten years ago}
+- {CZ: "A: Už jsi umyl ta okna? B: Ano. udělal jsem to před hodinou.", EN: A: Have you cleaned the windows? B: Yes, I did it an hour ago}
 
 templates:
 - ["[beperfect1a:CZ] [perfectnext1:CZ].","[beperfect1a:EN] [perfectnext1:EN]."]
