--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -146,7 +146,7 @@ perfectalone:
 - {CZ: On o tom slyšel předtím, EN: he has heard about it before}
 
 both:
-- {CZ: "Ještě jsem nenašla klíče, co jsme ztratila včera", EN: I haven't found the keys I lost yesterday}
+- {CZ: "Ještě jsem nenašla klíče, co jsem ztratila včera", EN: I haven't found the keys I lost yesterday}
 - {CZ: "Neudělala jsem nic od té doby, co jsem přečetla tvůj email", EN: I haven't done anything since I read your email}
 - {CZ: "Už prodala počítač, který koupila před 10 lety", EN: She has already sold the computer she bought ten years ago}
 
