--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -148,7 +148,7 @@ perfectalone:
 both:
 - {CZ: "Ještě jsem nenašla klíče, co jsem ztratila včera", EN: I haven't found the keys I lost yesterday}
 - {CZ: "Neudělala jsem nic od té doby, co jsem přečetla tvůj email", EN: I haven't done anything since I read your email}
-- {CZ: "Už prodala počítač, který koupila před 10 lety", EN: She has already sold the computer she bought ten years ago}
+- {CZ: "Už prodala počítač, který koupila před deseti lety", EN: She has already sold the computer she bought ten years ago}
  -{CZ: "Ještě jsem ti neposlal ten odkaz, který jsi chtěl", EN: I haven't sent you the link you wanted}
 
 
