--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -148,8 +148,10 @@ perfectalone:
 both:
 - {CZ: "Ještě jsem nenašla klíče, co jsem ztratila včera", EN: I haven't found the keys I lost yesterday}
 - {CZ: "Neudělala jsem nic od té doby, co jsem přečetla tvůj email", EN: I haven't done anything since I read your email}
-
-
+- {CZ: "Už prodala počítač, který koupila před deseti lety", EN: She has already sold the computer she bought ten years ago}
+ -{CZ: "Ještě jsem ti neposlal ten odkaz, který jsi chtěl", EN: I haven't sent you the link you wanted}
+ -{CZ: " Od té doby, co jsme se naposledy viděli, se hodně změnilo.", EN: A lot has changed since we last saw each other}
+ 
 templates:
 - ["[beperfect1a:CZ] [perfectnext1:CZ].","[beperfect1a:EN] [perfectnext1:EN]."]
 - ["[beperfect1a:EN] [perfectnext1:EN].","[beperfect1a:CZ] [perfectnext1:CZ]."]
