--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -154,6 +154,14 @@ both:
 
 questions:
 - {CZ: Už jsi viděl ten film, EN: Have you already seen that movie}
+- {CZ: Viděl jsi včera ten film, EN: Did you see that movie}
+- {CZ: Jak dlouho jstou svoji, EN: How long have they been married}
+- {CZ: Kde pracoval tvůj bratr před pěti lety, EN: Where did you brother work five years ago}
+- {CZ: Jak dlouho tady jsou, EN: How long have they been there}
+- {CZ: Co se stalo, EN: What happened}
+- {CZ: Kde jste byli, EN: Where have you been}
+
+
  
 
 templates:
