--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -148,7 +148,7 @@ perfectalone:
 twopasts:
 - {CZ: "Když jsem byla mladší,hrála jsem tenis", EN: I played tennis when I was younger}
 - {CZ: Vstal a vyčistil si zuby, EN: He got up and brushed his teeth}
-- {CZ: "Byla v šoku,když jsem jí o tom řekla" EN: She was in shock when I told her about it.}
+- {CZ: "Byla v šoku,když jsem jí o tom řekla", EN: She was in shock when I told her about it.}
 
 both:
 - {CZ: "Ještě jsem nenašla klíče, co jsem ztratila včera", EN: I haven't found the keys I lost yesterday}
