--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -155,6 +155,7 @@ both:
 - {CZ: "Už prodala počítač, který koupila před deseti lety", EN: She has already sold the computer she bought ten years ago}
 - {CZ: "Ještě jsem ti neposlal ten odkaz, který jsi chtěl", EN: I haven't sent you the link you wanted}
 - {CZ: "Hodně se změnilo od té doby, co jsme se viděli naposledy", EN: A lot has changed since we last saw each other}
+- {CZ: "Nic se nezměnilo od té doby, kdy jste se ptali naposledy", EN: Nothing has changed since you last asked}
 
 questions:
 - {CZ: Už jsi viděl ten film, EN: Have you already seen that movie}
