--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -77,6 +77,7 @@ perfectir:
 - {CZ: Máme toto auto, EN: We have had this car}
 - {CZ: Neviděla je, EN: She hasn't seen them}
 - {CZ: Neslyšela o tom, EN: She hasn't heard about it}
+- {CZ: Nehrála jsem na flétnu, EN: I haven't played the flute}
 
 seen:
 - {CZ: they haven't seen him, EN: Neviděli ho}
@@ -157,6 +158,7 @@ both:
 - {CZ: "Ještě jsem ti neposlal ten odkaz, který jsi chtěl", EN: I haven't sent you the link you wanted}
 - {CZ: "Hodně se změnilo od té doby, co jsme se viděli naposledy", EN: A lot has changed since we last saw each other}
 - {CZ: "Nic se nezměnilo od té doby, kdy jste se ptali naposledy", EN: Nothing has changed since you last asked}
+- {CZ: "Nedívala se na televizi od té doby, co jsem koupila počítač",EN: I haven't watched TV since I bought a computer}
 
 questions:
 - {CZ: Už jsi viděl ten film, EN: Have you already seen that movie}
