--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -163,7 +163,7 @@ both:
 questions:
 - {CZ: Už jsi viděl ten film, EN: Have you already seen that movie}
 - {CZ: Viděl jsi včera ten film, EN: Did you see that movie}
-- {CZ: Jak dlouho jstou svoji, EN: How long have they been married}
+- {CZ: Jak dlouho jsou svoji, EN: How long have they been married}
 - {CZ: Kde pracoval tvůj bratr před pěti lety, EN: Where did you brother work five years ago}
 - {CZ: Jak dlouho tady jsou, EN: How long have they been there}
 - {CZ: Co se stalo, EN: What happened}
