--- a/src/apps/anglictina-intermediate-vety.yaml
+++ b/src/apps/anglictina-intermediate-vety.yaml
@@ -1,6 +1,7 @@
-a:
-- {CZ: b, EN: c}
-- {CZ: d, EN: e}
+present:
+- {CZ: Těším se na dovolenou příští měsíc,EN: I am looking forward to my vacation next month}
+- {CZ: "Obvykle jezdím travmají, ale dneska jedu na kole" ,EN: "I usually go by tram, but today I go by bike"}
+- {CZ:  Právě dočetl nejnovější knihu od svého oblíbeného autora ,EN: He has just finished reading the latest novel by his favorite author}
 
 templates:
-- ["[a:CZ].","[a:EN]."]
+- ["[present:CZ].","[present:EN]."]
