--- a/src/apps/anglictina-intermediate-vety.yaml
+++ b/src/apps/anglictina-intermediate-vety.yaml
@@ -4,13 +4,20 @@ present:
 
 pperfect:
 - {CZ: Právě dočetl nejnovější knihu od svého oblíbeného autora , EN: He has just finished reading the latest novel by his favorite author}
-- {CZ: "Společnost nedávno zavedla nová pravidla,aby snížila svoji uhlíkovou stopu", EN: The company has recently introduced new rules to reduce its carbon footprint}
+- {CZ: "Společnost nedávno zavedla nová pravidla, aby snížila svoji uhlíkovou stopu", EN: The company has recently introduced new rules to reduce its carbon footprint}
 
 pastperfect:  
 - {CZ: "Když dorazila na letiště, letadlo už odletělo, takže musela čekat na další dostupný let", EN: "By the time she arrived at the airport, the flight had already departed, so she had to wait for the next available flight"}
+
+conditionals:
+- {CZ: "Když bude pršet, zůstanu doma", EN: "If it rains, I will stay inside"}
+- {CZ: "Kdybych byl/a tebou, vzal/a bych si den volna", EN: "If I were you, I would take a day off."}
+- {CZ: "Když ji uvidím, řeknu jí tu novinku, EN: I will tell her the news if I see her}
+- {CZ: "Kdyby jsme vyrazili dřív, nezmeškali bychom vlak", EN: "If we had left earlier, we wouldn't have missed the train"}
+- {CZ: "Kdyby vzala tu práci, tak by teď vydělávala víc peněz", EN: "If she had taken the job, she would be earning more money now."}
 
 templates:
 - ["[present:CZ].","[present:EN]."]
 - ["[pperfect:CZ].","[pperfect:EN]."]
 - ["[pastperfect:CZ].","[pastperfect:EN]."]
-
+- ["[conditionals:CZ].","[conditionals:EN]."]
