--- a/src/apps/anglictina-intermediate-vety.yaml
+++ b/src/apps/anglictina-intermediate-vety.yaml
@@ -3,7 +3,7 @@ present:
 - {CZ: "Obvykle jezdím travmají, ale dneska jedu na kole" , EN: "I usually go by tram, but today I go by bike"}
 
 pperfect:
-- {CZ: Právě dočetl nejnovější knihu od svého oblíbeného autora , EN: He has just finished reading the latest novel by his favorite author}
+- {CZ: Právě dočetl nejnovější knihu od svého oblíbeného autora, EN: He has just finished reading the latest novel by his favorite author}
 - {CZ: "Společnost nedávno zavedla nová pravidla, aby snížila svoji uhlíkovou stopu", EN: The company has recently introduced new rules to reduce its carbon footprint}
 
 pastperfect:  
@@ -11,7 +11,7 @@ pastperfect:
 
 conditionals:
 - {CZ: "Když bude pršet, zůstanu doma", EN: "If it rains, I will stay inside"}
-- {CZ: "Kdybych byl/a tebou, vzal/a bych si den volna", EN: "If I were you, I would take a day off."}
+- {CZ: "Kdybych byl/a tebou, vzal/a bych si den volna", EN: "If I were you, I would take a day off"}
 - {CZ: "Když ji uvidím, řeknu jí tu novinku, EN: I will tell her the news if I see her}
 - {CZ: "Kdyby jsme vyrazili dřív, nezmeškali bychom vlak", EN: "If we had left earlier, we wouldn't have missed the train"}
 - {CZ: "Kdyby vzala tu práci, tak by teď vydělávala víc peněz", EN: "If she had taken the job, she would be earning more money now."}
